--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type":"commonjs",
+  "type": "commonjs",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -14,11 +14,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-myconnection": "^1.0.4",
-    "express-session": "^1.17.3",
+    "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1"
   }
